<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lance.btcontroller.SettingActivity">

    <TextView
        android:id="@+id/text_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_server_setting"/>
    <EditText
        android:id="@+id/edit_server_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_setting"
        android:paddingTop="20dp"
        android:hint="@string/hint_ip"/>
    <EditText
        android:id="@+id/edit_server_port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_server_ip"
        android:inputType="number"
        android:hint="@string/hint_port"/>

    <TextView
        android:id="@+id/text_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_network_setting"
        android:layout_below="@id/edit_server_port"
        android:paddingTop="40dp"/>
    <EditText
        android:id="@+id/edit_local_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_network"
        android:paddingTop="20dp"
        android:hint="@string/hint_local_ip"/>
    <EditText
        android:id="@+id/edit_netmask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_local_ip"
        android:hint="@string/hint_local_netmask"/>

    <EditText
        android:id="@+id/edit_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_netmask"
        android:hint="@string/hint_local_gateway"/>
    <LinearLayout
        android:id="@+id/layout_button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_gateway"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/button_edit_setting"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_edit_tcp"/>
        <Button
            android:id="@+id/button_save_setting"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/button_save_tcp"/>
    </LinearLayout>

</RelativeLayout>
