<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="#DCDCDC"
    tools:context="com.example.lance.btcontroller.NetworkFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:background="#fff">

                <TextView
                    android:id="@+id/network_text_tcp_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_server_setting"
                    android:textColor="#696969"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <CheckBox
                    android:id="@+id/network_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_checkbox"

                    android:layout_alignParentRight="true"/>

                <LinearLayout
                    android:id="@+id/container_server_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_ip"/>
                    <EditText
                        android:id="@+id/network_edit_server_ip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingTop="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/container_server_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_port"/>
                    <EditText
                        android:id="@+id/network_edit_server_port"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_server_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <Button
                        android:id="@+id/network_button_get_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:text="@string/button_start_get_data"/>
                </LinearLayout>
        </LinearLayout>


            <View
                android:id="@+id/blank"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <View
                android:id="@+id/seperater"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:background="#fff">
                <TextView
                    android:id="@+id/network_text_local_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_network_setting"
                    android:textColor="#696969"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:id="@+id/container_local_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_local_ip"/>
                    <EditText
                        android:id="@+id/network_edit_local_ip"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:paddingTop="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/container_netmask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_local_netmask"/>
                    <EditText
                        android:id="@+id/network_edit_netmask"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/hint_local_netmask"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/container_local_gateway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_local_gateway"/>
                    <EditText
                        android:id="@+id/network_edit_gateway"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:hint="@string/hint_local_gateway"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/network_layout_button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingTop="10dp">
                    <Button
                        android:id="@+id/network_button_edit"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="2dp"
                        android:text="@string/button_edit_tcp"/>

                </LinearLayout>
        </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>
